# news-narrative-explainer

./: .gitignore  README.md
v2/: Cargo.toml  README.md  docker-compose.yml
v2/results/: 2026-06-28-v2-benchmark-baseline.json
v2/sql/: load_gcs_into_clickhouse.sql  load_local_parquet_into_clickhouse.sql  schema.sql
v2/src/: main.rs
v3/: Cargo.toml  README.md  _duckdb_bootstrap.py  test_v3_narrative_explainer_mcp.py  test_v3_validate_mcp_narrative.py  v3_narrative_explainer_mcp.py  v3_narrative_text_matching.py  v3_query_narrative_graph.py  v3_remote_parquet_store.py  v3_validate_mcp_narrative.py
v3/results/: 2026-05-28-v3-benchmark.json  2026-05-29-v3-benchmark.json  2026-05-30-v3-benchmark.json  2026-05-31-v3-benchmark.json  2026-06-01-v3-benchmark.json  2026-06-02-v3-benchmark.json  2026-06-03-v3-benchmark.json  2026-06-04-v3-benchmark.json  2026-06-05-v3-benchmark.json  2026-06-05-v3-validation-hosted-qdrant-llmjudge.json  2026-06-05-v3-validation-hosted-qdrant.json  2026-06-05-v3-validation-smoke.json  2026-06-06-v3-benchmark.json  2026-06-07-v3-benchmark.json  2026-06-08-v3-benchmark.json  2026-06-09-v3-benchmark.json  2026-06-10-v3-benchmark.json  2026-06-11-v3-benchmark.json  2026-06-12-v3-benchmark.json  2026-06-13-v3-benchmark.json  2026-06-14-v3-benchmark.json  2026-06-15-v3-benchmark.json  2026-06-16-v3-benchmark.json  2026-06-17-v3-benchmark.json  2026-06-18-v3-benchmark.json  2026-06-19-v3-benchmark.json  2026-06-20-v3-benchmark.json  2026-06-21-v3-benchmark.json  2026-06-22-v3-benchmark.json  2026-06-23-v3-benchmark.json  all-days-summary.tsv  (+15 more)
(+84 files in other folders)
