[package]
name = "news-narrative-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
html-escape = "0.2"
polars = { version = "0.46", features = ["lazy", "parquet", "fmt", "strings"] }
qdrant-client = "1.18.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tiny_http = "0.12"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
ureq = { version = "3.1", features = ["json"] }
url = "2.5"
uuid = { version = "1.10", features = ["v5", "serde"] }
